--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
     ],
     "require": {
         "yiisoft/yii2": ">=2.0.0",
-        "kilyakus/yii2-module-base": "*"
+        "kilyakus/yii2-helper-base": "*",
+        "kilyakus/yii2-module-base": "*",
+        "kilyakus/yii2-template-engine": "*"
     },
     "autoload": {
         "psr-4": {
